# LookingGlass

./: .clang-format
client/displayservers/Wayland/: cursor.c  gl.c  wayland.h
client/displayservers/X11/: x11.c  x11.h
client/include/: app.h  eglutil.h  overlay_utils.h
client/include/interface/: displayserver.h  overlay.h
client/renderers/EGL/: cursor.h  desktop_rects.c  desktop_rects.h  egl.c  texture.h
client/src/: app.c  eglutil.c  main.h  overlay_utils.c
client/src/overlay/: alert.c  config.c  fps.c  graphs.c  help.c
common/include/common/: types.h
common/src/: stringutils.c
common/src/platform/: CMakeLists.txt
common/src/platform/macos/: CMakeLists.txt  crash.c  event.c  ivshmem.c  paths.c  thread.c  time.c  time.h
host/: CMakeLists.txt
host/platform/: CMakeLists.txt
host/platform/macOS/: CMakeLists.txt
host/platform/macOS/capture/: CMakeLists.txt
host/platform/macOS/capture/CoreGraphics/: CMakeLists.txt
host/platform/macOS/capture/CoreGraphics/src/: coregraphics.c  coregraphics.m
host/platform/macOS/src/: platform.c
